# LEAP

./: .gitignore  launch.py
ros2_ws/: .gitignore  crash_dump.txt  frames_2026-05-22_15.48.56.gv  output.txt
ros2_ws/src/leap_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/leap_control/config/: ekf.yaml  ekf_global.yaml  ekf_local.yaml  lidar3d-default.yaml  lidar_odometry_ros2.yaml  mux_params.yaml  sim_ekf.yaml  sim_mapper_params_localization.yaml  sim_mapper_params_online_async.yaml  state-estimation-simple.yaml  twist_mux_params.yaml  xbox_joy_params.yaml  xbox_params.yaml
ros2_ws/src/leap_control/launch/: amiga_control.launch.py  amiga_localization.launch.py  keyboard.launch.py  ros2-lidar-odometry.launch.py  sim_localization.launch.py  sim_localization_mola.launch.py  teleop.launch.py
ros2_ws/src/leap_control/leap_control/: amiga_control.py  cmdvel_relay.py  imu_calibration.py  imu_relay.py  ply_publisher.py
ros2_ws/src/leap_control/maps/: cmu.ply  cmu_dtm.ply  cmu_occ.pgm  cmu_occ.yaml  cmu_utm.ply
ros2_ws/src/leap_control/rviz/: lidar-odometry.rviz
ros2_ws/src/leap_desc/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/leap_desc/config/: diff_controller.yaml
ros2_ws/src/leap_desc/launch/: rsp.launch.py
ros2_ws/src/leap_desc/meshes/: Blackfly.stl  Frame.stl  Ouster.stl  Reach.stl  SensorMount.stl
ros2_ws/src/leap_desc/meshes/old/: RTK_gnss.STL
ros2_ws/src/leap_desc/urdf/: amiga_base.xacro  sensor_module.urdf.xacro  top_level_amiga.urdf.xacro
ros2_ws/src/leap_icp/: CMakeLists.txt  package.xml
ros2_ws/src/leap_icp/src/: map_odom_localizer.cpp
ros2_ws/src/leap_launch/: package.xml  setup.cfg  setup.py
ros2_ws/src/leap_launch/launch/: amiga_localization.launch.py  amiga_navigation.launch.py  amiga_record.launch.py  amiga_sensors.launch.py
ros2_ws/src/leap_sensors/: CMakeLists.txt  package.xml
ros2_ws/src/leap_sensors/config/: blackfly_s.yaml  blackfly_s_trigger.yaml  flir_calib.yaml  ouster_flir_ext_cal.txt  ouster_flir_ext_cal2.txt  ouster_metadata.json  ouster_params.yaml
ros2_ws/src/leap_sensors/launch/: blackfly_s.launch.py  yolo.launch.py
ros2_ws/src/leap_sensors/rviz/: sensor_module.rviz  sensor_module_small.rviz  sensor_module_small_yolo.rviz
ros2_ws/src/leap_sim/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/leap_sim/config/: ekf_config.yaml
ros2_ws/src/leap_sim/include/leap_sim/: gps_covariance_injector.hpp  imu_covariance_injector.hpp
ros2_ws/src/leap_sim/launch/: gazebo.launch.py  main.launch.py
ros2_ws/src/leap_sim/models/birch_tree/: model.config  model.sdf
ros2_ws/src/leap_sim/models/driveway_plane/: model.config  model.sdf
ros2_ws/src/leap_sim/models/maple_tree/: model.config  model.sdf
ros2_ws/src/leap_sim/models/maple_tree/meshes/: potted_maple_tree17.dae  potted_maple_tree7.dae
ros2_ws/src/leap_sim/models/nursery_ground/: model.config  model.sdf
ros2_ws/src/leap_sim/rviz/: amiga_config.rviz
ros2_ws/src/leap_sim/src/: gps_covariance_injector.cpp  imu_covariance_injector.cpp
ros2_ws/src/leap_sim/urdf/: amiga_sim copy.xacro  amiga_sim.xacro  top_level_amiga.urdf  top_level_amiga.urdf.xacro
ros2_ws/src/leap_sim/worlds/: tree_rows.sdf.erb  tree_rows.world
ros2_ws/src/mola_bridge_ros2/include/mola_bridge_ros2/: BridgeROS2.h
ros2_ws/src/mola_bridge_ros2/src/: BridgeROS2.cpp
