<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leap_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="atharvgo@andrew.cmu.edu">atharvgoel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>xterm</exec_depend>
  <exec_depend>mola_launcher</exec_depend>
  <exec_depend>mola_lidar_odometry</exec_depend>
  <exec_depend>mola_bridge_ros2</exec_depend>
  <exec_depend>mola_state_estimation_smoother</exec_depend>
  <exec_depend>mola_metric_maps</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
