<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leap_launch</name>
  <version>0.0.0</version>
  <description>Launch files for the LEAP project</description>
  <maintainer email="atharvgo@andrew.cmu.edu">slam_rig</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>leap_icp</exec_depend>

  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>ouster_ros</exec_depend>

  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <exec_depend>leap_desc</exec_depend>
  <exec_depend>leap_sensors</exec_depend>
  <exec_depend>leap_control</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
