<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leap_sensors</name>
  <version>0.0.0</version>
  <description>Sensor nodes for the LEAP project</description>
  <maintainer email="atharvgo@andrew.cmu.edu">slam_rig</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>yolo_ros</exec_depend>
  <exec_depend>yolo_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
